# feeds

schd/: Makefile
schd/files/etc/config/: schd
schd/files/etc/init.d/: schd
schd/src/: CMakeLists.txt  Makefile  log.h  schd.c  schd.h  service.c  signal.c  ubus.c
